--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "composite": true,
     "strict": true,
     "downlevelIteration": true,
+    "declaration": true,
     "skipLibCheck": true,
     "jsx": "react-jsx",
     "outDir": "./dist/",
